# stock

./: .gitignore  README.md  docker-compose.yml  mempalace.yaml
.claude/: settings.local.json
api-server/: go.mod  go.sum  handler_test.go  main.go
api-server/etc/: api-server.yaml
api-server/internal/config/: config.go
api-server/internal/handler/: backtest.go  health.go  routes.go  strategy.go  symbol.go  testhandler.go
api-server/internal/logic/: backtest_logic.go  strategy_logic.go
api-server/internal/svc/: servicecontext.go
api-server/internal/types/: types.go
api-server/proto/: backtest.pb.go  backtest_grpc.pb.go
backtest-engine/: go.mod  go.sum
backtest-engine/cmd/server/: main.go
backtest-engine/internal/analytics/: analytics.go  analytics_test.go
backtest-engine/internal/data/: bar.go  parquet_store.go  store.go  store_test.go
backtest-engine/proto/: backtest.proto
docs/: PROGRESS.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  setupTests.js
migrations/: 001_init.sql  002_strategies.sql
python/: Makefile  pyproject.toml  run_backtest.py
python/backtest/: analytics.py  client.py  portfolio.py  runner.py  strategy.py  types.py  walk_forward.py
python/backtest/proto/: backtest_pb2.py  backtest_pb2_grpc.py
python/strategies/: ma_cross.py
python/tests/: test_analytics.py  test_portfolio.py  test_runner.py  test_walk_forward.py
tools/adjfactor/: go.mod  go.sum  main.go
tools/calendar/: go.mod  main.go
tools/importer/: go.mod  go.sum  main.go
tools/normalize/: main.go
(+26 files in other folders)
