[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-backtest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "protobuf>=4.25.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
strategies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest*", "strategies*"]
